TAG: targetedalleleload-4-4-0-3
DATE: 12/1/2010
STAFF: jmason
CHANGES:
1) Add configuration variable and code to switch the load
   to only process updates OR only create new records
   the toggle is the boolean TAL_UPDATE (true = update only)
2) Refactor logging of changes to clean up processing method

TAG: targetedalleleload-4-4-0-2
DATE: 11/30/2010
STAFF: jmason
CHANGES:
1) Add new mapping for JM8A3N1

TAG: targetedalleleload-4-4-0-1
DATE: 11/29/2010
STAFF: jmason
CHANGES:
1) Add norcomm specific classes and cfg files (not used yet)
2) Add orphaned MCL when the last real MCL moves away from an allele
3) Create derivation records on the fly as needed as long as all the
   required information already exists in the database
4) Update derivation associations when an MCL changes to a new allele
5) Update note templates to be more generic to avoid needing to calculate
   which is the start and which is the end
6) Format the exception messages better  

TAG: targetedalleleload-4-3-5-1
DATE: 6/22/2010
STAFF: jmason
CHANGES:
1) Add keys for new cell lines
2) Add configuration used to the email subject line

TAG: targetedalleleload-4-3-4-2
DATE: 5/14/2010
STAFF: jmason
CHANGES:
1) Remove bogus parental cell lines before they are looked up (more stack trace removal)

TAG: targetedalleleload-4-3-4-1
DATE: 5/14/2010
STAFF: jmason
CHANGES:
1) Update error handling to remove stack trackes from diag log

TAG: targetedalleleload-4-3-3-1
DATE: 4/30/2010
STAFF: jmason
CHANGES:
1) Add processing for new cell line and derivation checking

TAG: targetedalleleload-4-3-2-3
DATE: 3/03/2010
STAFF: jmason
CHANGES:
1) Change CSD and EUCOMM processor and interpreter to Sanger processer
   and interpreter
2) Update sequence generation  to count all alleles per labcode when
   calculating the next default allele sequence number
3) New jnumbers for each provider
4) Load is run by provider now, not pipeline
5) 

TAG: targetedalleleload-4-3-2-2
DATE: 1/28/2010
STAFF: jmason
CHANGES: