@@ -77,7 +77,8 @@ export LOG_PROC LOG_DIAG LOG_CUR LOG_VAL LOG_DEBUG
 export CACHE_DEBUG LOG_FACTORY
 
 TAL_UPDATE=true
-export TAL_UPDATE
+TAL_UPDATEDERIVATIONS=false
+export TAL_UPDATE TAL_UPDATEDERIVATIONS
 
 ###########################################################################
 #
